Grafana / Prom monitoring

--- a/monitoring-compose.yml
+++ b/monitoring-compose.yml
@@ -1,16 +1,41 @@
 version: "3"
 
 services:
+  prometheus:
+    build:
+      context: monitoring/prometheus/
+    container_name: prometheus
+    volumes:
+      - ./monitoring/prometheus/config/:/etc/prometheus/
+      - prometheus:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    depends_on:
+      - cadvisor
+    restart: always
+    logging:
+      driver: json-file
+      options:
+        max-size: "4m"
+        max-file: "10"
+    environment:
+      - VIRTUAL_HOST=prometheus.example.com
+      - VIRTUAL_PORT=9090
+      - LETSENCRYPT_HOST=prometheus.example.com
+      - LETSENCRYPT_EMAIL=you@youremail.com
+
   cadvisor:
     build:
       context: monitoring/cadvisor/
     container_name: cadvisor
     volumes:
-      - "/:/rootfs:ro"
-      - "/var/run:/var/run:ro"
-      - "/sys:/sys:ro"
-      - "/dev/disk/:/dev/disk:ro"
-      - "/var/lib/docker/:/var/lib/docker:ro"
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
     logging:
       driver: json-file
       options:
@@ -26,7 +51,12 @@ services:
     build:
       context: monitoring/alertmanager/
     container_name: alertmanager
+    volumes:
+      - ./monitoring/alertmanager/config/:/etc/alertmanager/
     restart: always
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+      - '--storage.path=/alertmanager'
     logging:
       driver: json-file
       options:
@@ -47,16 +77,44 @@ services:
       - "/sys:/host/sys:ro"
       - "/:/rootfs:ro"
     command:
-      - "--path.procfs=/host/proc"
-      - "--path.sysfs=/host/sys"
-      - "--collector.filesystem.ignored-mount-points"
-      - ^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - --collector.filesystem.ignored-mount-points
+      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
     restart: always
     logging:
       driver: json-file
       options:
         max-size: "4m"
         max-file: "10"
+
+  grafana:
+    build:
+      context: monitoring/grafana/
+    container_name: grafana
+    user: "104"
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana:/var/lib/grafana
+      - ./monitoring/grafana/config/provisioning/:/etc/grafana/provisioning/
+    env_file:
+      - ./monitoring/grafana/config/config.monitoring
+    restart: always
+    logging:
+      driver: json-file
+      options:
+        max-size: "4m"
+        max-file: "10"
+    environment:
+      - VIRTUAL_HOST=grafana.example.com
+      - VIRTUAL_PORT=3000
+      - LETSENCRYPT_HOST=grafana.example.com
+      - LETSENCRYPT_EMAIL=you@youremail.com
+
+volumes:
+  prometheus:
+  grafana:
 
 networks:
   default:
