Fix container names

--- a/monitoring/prometheus/config/prometheus.yml
+++ b/monitoring/prometheus/config/prometheus.yml
@@ -7,7 +7,7 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-      monitor: 'my-project'
+      monitor: '45press-dev'
 
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
 rule_files:
@@ -44,7 +44,7 @@ scrape_configs:
 
     dns_sd_configs:
     - names:
-      - 'tasks.cadvisor'
+      - 'cadvisor'
       type: 'A'
       port: 8080
 
@@ -58,6 +58,6 @@ scrape_configs:
 
     dns_sd_configs:
     - names:
-      - 'tasks.node-exporter'
+      - 'node-exporter'
       type: 'A'
       port: 9100
