--- a/sentry/.env.example
+++ b/sentry/.env.example
@@ -1,3 +1,5 @@
-# Run `docker-compose run web config generate-secret-key`
+# Run `docker-compose -f sentry-compose.yml run sentry-web config generate-secret-key`
 # to get the SENTRY_SECRET_KEY value.
 SENTRY_SECRET_KEY=
+SENTRY_USE_SSL=1
+SENTRY_ENVIRONMENT=production
