--- a/sentry/config.yml
+++ b/sentry/config.yml
@@ -3,6 +3,10 @@
 # to enforce defaults or to ensure they cannot be changed via the UI. For more
 # information see the Sentry documentation.
 
+system.admin-email: 'you@youremail.com'
+system.url-prefix: 'https://sentry.example.com'
+
+
 ###############
 # Mail Server #
 ###############
